<resources>
    <string name="app_name">Wear Jam</string>
    <string name="play_mode_all">All</string>
    <string name="play_mode_shuffle">Shuffle</string>
    <string name="play_mode_repeat">Single Repeat</string>
    <string name="play_mode_ab_loop">AB Loop</string>
    <string name="menu_add">Add</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="add_to_list">Add to play list</string>
    <string name="remove_select">Remove from list</string>
    <string name="confirm">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="remove_file_from_list">Remove \n%s \nfrom this list?　(Would not delete this file)</string>
    <string name="volume_control">Volume</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_list_all">Clear all of this list? (Would not delete these file)</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="range_invalid">Range is invalid</string>
    <string name="mark_a">Mark A</string>
    <string name="mark_b">Mark B</string>
    <string name="must_be_less_than_song_duration">must be less than song duration</string>
    <string name="song_list_empty">Song list is empty</string>
    <string name="list_empty">Play list is empty. Try to use \"add\" button to add songs to your list!</string>
    <string name="play_mode_video">Video</string>
    <string name="upload_to_watch">Sync To Watch</string>
    <string name="menu_help">Help</string>
    <string name="title_synchronization">Synchronize with watch</string>
    <string name="msg_sync">Long click a song, and the checkbox will show. Select your songs and press \'Sync to watch\'</string>
    <string name="msg_song_empty">Try to press to \'add\' your favorite songs into playlist.</string>
    <string name="help_title_add">Add songs</string>
    <string name="help_title_choose_file">1. Long click a folder or a file will show checkbox.\n2. When you choose a folder, all files in this folder will be search and check.\n3. Only audio format and can be played in this app will be add into playlist.</string>
    <string name="sync_to_watch_msg1">It will send %s file(s)</string>
    <string name="sync_to_watch_msg2">estimated about %s to your watch.</string>
    <string name="sync_to_watch_msg3">And your watch available space are %s.</string>
    <string name="sync_to_watch_msg_empty">You didn\'t select any song. Synchronization will clear all songs in your watch list. Are you sure?</string>
    <string name="sync_to_watch_complete">Synchronization complete</string>
</resources>
